fixed dark theme contrasts

--- a/bloggerFrontend/src/components/LogInPanel.css
+++ b/bloggerFrontend/src/components/LogInPanel.css
@@ -39,7 +39,7 @@ button {
 @media (min-width: 750px) {
   button {
     padding: 0.6em 1.2em;
-    font-size: larger;
+    font-size: x-large;
     font-weight: bold;
   }
 
