--- a/visitorFrontend/src/components/LogInPanel.css
+++ b/visitorFrontend/src/components/LogInPanel.css
@@ -44,7 +44,7 @@ button {
   button {
     height: 90%;
     padding: 0.6em 1.2em;
-    font-size: larger;
+    font-size: x-large;
     font-weight: bold;
   }
 
