--- a/visitorFrontend/src/index.css
+++ b/visitorFrontend/src/index.css
@@ -4,8 +4,6 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -55,15 +53,57 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
+:root {
+  background-color: #ffffff;
+}
+a:hover {
+  color: #747bff;
+}
+button {
+  background-color: #f9f9f9;
+}
+
+@media (prefers-color-scheme: dark) {
   :root {
-    color: #213547;
-    background-color: #ffffff;
+    color: rgba(255, 255, 255, 0.87);
+    background-color: #595959;
   }
-  a:hover {
-    color: #747bff;
+
+  h1,
+  h2,
+  h3,
+  p,
+  b {
+    color: #ffffff;
   }
+
   button {
-    background-color: #f9f9f9;
+    background-color: #595959;
+  }
+
+  .postCard {
+    background-color: #242424;
+  }
+
+  aside p {
+    color: black;
+  }
+
+  #homeIcon {
+    filter: invert(1);
+  }
+
+  .blogViewContainer {
+    background-color: #242424;
+    border-radius: 1em;
+    padding: 2em;
+  }
+
+  #commentContent {
+    background-color: black;
+  }
+
+  input {
+    background-color: black;
   }
 }
